# logseq-view

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  flake.nix
.gitea/workflows/: ci.yml  publish.yml
src/: action.rs  app.rs  lib.rs  main.rs  parser.rs  source.rs  ui.rs  view_model.rs  wrap.rs
