[package]
name = "logseq-view"
version = "0.3.0"
edition = "2021"
description = "TUI viewer for Logseq markdown files"
license = "MIT"
repository = "https://github.com/pitaya1219/logseq-view"
keywords = ["logseq", "tui", "markdown", "ratatui"]
categories = ["command-line-utilities"]
exclude = ["CLAUDE.md", "ARCHITECTURE.md", "clippy.toml"]

[[bin]]
name = "lqview"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
walkdir = "2"
